--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My First Repository</title>
 </head>
 <body>
-    
+    <h1>My First Github Repository</h1>
+    <p>gittu pakani is awesome</p>
+    <p>Learning slowly day by day</p>
 </body>
 </html>
